<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/main_bg_pic"
        tools:context=".CreateAccFragment">

        <TextView
            android:id="@+id/crate_acc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/create_acc_text"
            android:textAlignment="center"
            android:textColor="@color/main_blue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/CreateAccProfileImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/CreateAccProfileImageView"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/profile_img_upload_sape"
            app:layout_constraintBottom_toTopOf="@+id/create_acc_f_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crate_acc_title" />

        <EditText
            android:id="@+id/create_acc_f_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/f_name"
            android:inputType="textCapWords"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_l_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CreateAccProfileImageView" />

        <EditText
            android:id="@+id/user_profile_acc_l_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/l_name"
            android:inputType="textCapWords"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_acc_f_name" />

        <EditText
            android:id="@+id/user_profile_acc_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_l_name" />

        <EditText
            android:id="@+id/user_profile_acc_mobile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_pw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_email" />

        <EditText
            android:id="@+id/user_profile_acc_pw"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_update_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_mobile" />

        <Button
            android:id="@+id/user_profile_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/Sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/go_to_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_pw" />

        <Button
            android:id="@+id/go_to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/i_have_account"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_update_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>