<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/main_bg_pic"
        tools:context=".UserLoginFragment">

        <TextView
            android:id="@+id/User_Profile_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="32dp"
            android:text="@string/user_login_text"
            android:textColor="@color/main_blue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/UserProfileImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/UserProfileImageView"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/profile_img_upload_sape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_Profile_Text" />

        <EditText
            android:id="@+id/user_login_enter_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_login_enater_pw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserProfileImageView" />

        <EditText
            android:id="@+id/user_login_enater_pw"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_enter_email" />

        <Button
            android:id="@+id/user_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/user_login_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/goto_crate_acc_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_enater_pw" />

        <Button
            android:id="@+id/goto_crate_acc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/white"
            android:text="@string/user_login_goto_create_account_button_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>