<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg_pic"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/main_bg_pic"
        android:backgroundTint="?android:attr/panelBackground"
        tools:context=".UserProfileFragment">

        <TextView
            android:id="@+id/User_Profile_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/user_profile_title"
            android:textColor="@color/main_blue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/UserProfileImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/UserProfileImageView"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_marginBottom="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_img_upload_sape"
            app:layout_constraintBottom_toTopOf="@+id/user_Profile_f_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_Profile_Text"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:strokeColor="@color/main_blue"
            app:strokeWidth="2dp" />

        <EditText
            android:id="@+id/user_Profile_f_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/f_name"
            android:inputType="textCapWords"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_l_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserProfileImageView" />

        <EditText
            android:id="@+id/user_profile_acc_l_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/l_name"
            android:inputType="textCapWords"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_Profile_f_name" />

        <EditText
            android:id="@+id/user_profile_acc_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_l_name" />

        <EditText
            android:id="@+id/user_profile_acc_mobile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:enabled="false"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_acc_pw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_email" />

        <EditText
            android:id="@+id/user_profile_acc_pw"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_update_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_mobile" />

        <Button
            android:id="@+id/user_profile_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/main_blue"
            android:text="@string/user_profile_upadte_data_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_acc_pw" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>